Fix checkbox alignmennt

--- a/app/assets/stylesheets/common/components/bookmark-modal.scss
+++ b/app/assets/stylesheets/common/components/bookmark-modal.scss
@@ -75,14 +75,20 @@
     margin-left: 0.5em;
     margin-bottom: 0.5em;
     background: transparent;
+    padding-right: 6px;
   }
 
   .bookmark-options-panel {
     margin-bottom: 18px;
     display: none;
 
-    input[type="checkbox"] {
-      margin-right: 0.85em;
+    label {
+      display: flex;
+
+      span {
+        display: block;
+        flex: 1;
+      }
     }
   }
 }
